[package]
name = "vllmd-hypervisor"
version = "0.1.0"
edition = "2021"
description = "vllmd-hypervisor is the modern industry standards-based hypervisor to securely contain LLM inferencing workloads."
license = "Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4.1", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2.139"
signal-hook = "0.3.15"
thiserror = "1.0"
vmm-sys-util = "0.12.1"
uuid = { version = "1.3.0", features = ["v4"] }
seccompiler = "0.4.0"
nix = { version = "0.26.2", features = ["signal", "process"] }
hypervisor = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v44.0", features = ["kvm"] }
vmm = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v44.0", features = ["kvm", "io_uring"] }
option_parser = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v44.0" }
vm-memory = "0.16.1"
termimad = "0.31.2"
chrono = "0.4"

[[bin]]
name = "vllmd-hypervisor"
path = "src/main.rs"

[[bin]]
name = "log-renderer"
path = "log-renderer.rs"

[features]
default = ["kvm", "io_uring"]
kvm = ["hypervisor/kvm", "vmm/kvm"]
io_uring = ["vmm/io_uring"]
guest_debug = ["vmm/guest_debug"]
tdx = ["hypervisor/tdx", "vmm/tdx"]